<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Self Care Dashboard</string>
    <string name="add_goal">New Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="goal_archived">Goal archived</string>
    <string name="goal_marked_active">Goal marked active</string>
    <string name="goal_polarity_chase">Chase</string>
    <string name="goal_polarity_avoid">Avoid</string>
    <string name="loading_goals_error">Error while loading goals</string>
    <string name="archived_goals_cleared">Archived goals cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear polarity</string>
    <string name="menu_delete_goal">Delete goal</string>
    <string name="navigation_view_header_title">Goals</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your goal here.</string>
    <string name="empty_goal_message">Goals cannot be empty</string>
    <string name="successfully_saved_goal_message">Goal saved</string>
    <string name="list_title">Goal List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_goals">You have no goals.</string>
    <string name="statistics_active_goals">Active goals: %d</string>
    <string name="statistics_archived_goals">Archived goals: %d</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_goals_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_archived</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_archived">Archived</string>
    <string name="label_all">All Goals</string>
    <string name="label_active">Active Goals</string>
    <string name="label_archived">Archived Goals</string>
    <string name="no_goals_all">You have no goals!</string>
    <string name="no_goals_active">You have no active goals!</string>
    <string name="no_goals_archived">You have no archived goals!</string>
    <string name="no_goals_add">Add a goal item +</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_goal_message">Goal was deleted</string>
    <string name="successfully_added_goal_message">Goal added</string>
    <string name="no_data_description"/>

</resources>
