...
                android:id="@+id/add_goal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                <EditText
                    android:id="@+id/add_goal_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/title_hint"
                    android:maxLines="1"
...
                    android:layout_marginTop="8dp"
                    android:text="Interval in Days"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_goal_title"/>

                <CheckBox
                    android:id="@+id/goal_detail_archived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:checked="@{viewmodel.archived}"
                    android:text="Archived?"
                    app:layout_constraintStart_toStartOf="@+id/add_goal_polarity"
...
